# hark

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  RELEASE.md  SESSION_NOTE.md  install.sh  pyproject.toml
.backlog/: .context.yaml
docs/: ACCEPTANCE.md  AGY.md  ARCHITECTURE.md  AUDIO_DESIGN.md  CUSTOM_WAKE.md  DASHBOARD.md  DECISIONS.md  EXAMPLE_SESSION.md  HARKD.md  HERDR.md  IMPLEMENTATION.md  NAMING.md  OPEN_QUESTIONS.md  PRODUCT.md  PROTOCOL.md  PROVIDERS.md  REPO_TRANSFER.md  SAFETY.md  SPEC.md
fixtures/: README.md
scripts/: hark-agy-deliver.sh  run-mode-a.sh
site/: README.md  index.html  llms.txt
site/js/: main.js
skill/: SKILL.md
tests/: confirm_unicode_cases.py  test_agentapi.py  test_agents_resolve.py  test_ambient_record_cues.py  test_answer_arm_cue.py  test_answer_window_radio.py  test_ask_interrupt.py  test_ask_provider_errors.py  test_auth_discovery.py  test_boot_tts.py  test_cli_agent_start.py  test_conference.py  test_confirm.py  test_custom_triggers.py  test_daemon.py  test_dashboard_dictation.py  test_dashboard_server.py  test_dashboard_tailer.py  test_delivery.py  test_delivery_singleflight.py  test_doctor.py  test_echo_overlap.py  test_endpointing.py  test_events_monitor.py  test_fingerprint_risk.py  test_herdr_access.py  test_listen_end.py  test_listen_session_policy_bound_ambient.py  test_logview.py  test_media.py  test_meta_commands.py  test_mic_coord.py  test_monitor_feed.py  test_mute_clock_freeze.py  test_mute_sync.py  test_pane_capture.py  test_partial.py  test_playback_speed.py  test_post_wake_listen.py  test_radio_idle_end.py  (+15 more)
(+291 files in other folders)
